# seo-echo-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  glama.json  pyproject.toml  smithery.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: REGISTRY_SUBMISSIONS.md  build-spec.md
examples/: README.md  audit_report.json  content_gap_report.json  draft_skeleton.md  outline.json  site_profile.json
src/seo_echo_mcp/: __init__.py  schemas.py  server.py
src/seo_echo_mcp/config/: ai_cliches.py  seo_rules.py  slug_rules.py
src/seo_echo_mcp/config/templates/: de.py  en.py  es.py  fr.py  loader.py  tr.py
src/seo_echo_mcp/extractors/: content.py  serp.py  sitemap.py  style.py
src/seo_echo_mcp/tools/: analyze_competitors.py  analyze_site.py  audit_content.py  check_duplicates.py  detect_content_gaps.py  generate_faq_section.py  generate_meta_variations.py  generate_outline.py  generate_schema_jsonld.py  generate_slug.py  prepare_draft_skeleton.py  readability_report.py  suggest_image_alts.py  suggest_titles.py
src/seo_echo_mcp/utils/: text.py
tests/: conftest.py  test_analyze_competitors.py  test_analyze_site.py  test_analyze_site_cache.py  test_audit_content.py  test_content_gaps_duplicates.py  test_extractors.py  test_generate_outline.py  test_meta_slug_faq_schema.py  test_prepare_draft_skeleton.py  test_readability.py  test_suggest_image_alts.py  test_suggest_titles.py
tests/fixtures/: sample_sitemap.xml
