[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-echo-mcp"
version = "0.2.0"
description = "MCP server that analyzes your blog's voice and helps create SEO content that matches your style — language-agnostic."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Canberk Kılıçarslan", email = "kayit@canberkki.com" }
]
keywords = [
    "seo",
    "seo-tools",
    "content-seo",
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "fastmcp",
    "claude",
    "claude-code",
    "claude-desktop",
    "cursor",
    "content",
    "content-generation",
    "content-optimization",
    "writing-style",
    "writing-tools",
    "voice",
    "blog",
    "blogging",
    "llm-tools",
    "ai-writing",
    "ai-content",
    "multilingual",
    "language-agnostic",
    "schema-org",
    "json-ld",
    "faq",
    "readability",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "trafilatura>=1.12.0",
    "py3langid>=0.2.2",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "respx>=0.21.0",
]

[project.scripts]
seo-echo-mcp = "seo_echo_mcp.server:main"

[project.urls]
Homepage = "https://github.com/canberkys/seo-echo-mcp"
Issues = "https://github.com/canberkys/seo-echo-mcp/issues"
Changelog = "https://github.com/canberkys/seo-echo-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/seo_echo_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
